--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-partials": "~0.2.0",
     "forever": "^0.10.11",
     "grunt": "^0.4.4",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-jshint": "^0.9.2",
@@ -28,10 +29,12 @@
     "mocha": "^1.17.1",
     "mongoose": "~3.8.8",
     "q": "^1.2.0",
-    "request": "^2.34.0",
-    "sqlite3": "^3.0.5"
+    "request": "^2.34.0"
   },
   "devDependencies": {
     "supertest": "^0.10.0"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/grunt-cli/bin/grunt server-build"
   }
 }
